# TrackFlow

./: .gitignore  CMakeLists.txt  README.md  TrackFlow-Intersection-Agent.md  debug.md  export_onnx.py  test_v5.html  trackflow_dashboard.html
.claude/: CLAUDE.md
config/: config.yaml
deploy/nginx/: trackflow.localhost.conf
frontend/: inference.html
frontend/assets/css/: inference.css
frontend/assets/js/inference/: app.js
include/core/: event_writer.hpp  roi_registry.hpp
include/processors/: traffic_analyzer.hpp
scripts/: bootstrap_localhost.sh  geo_validate.cpp  run_localhost.sh  setup_mysql.sh
sql/: 001_init.sql
src/: main.cpp
src/core/: event_writer.cpp  roi_registry.cpp
src/network/: ws_server.cpp
src/processors/: batch_inference_engine.cpp  geo_transformer.cpp  traffic_analyzer.cpp
